fix share overflow bug

--- a/assets/css/style_share.css
+++ b/assets/css/style_share.css
@@ -1,7 +1,7 @@
 html, body {
     width: 100%;
     background: pink;
-    overflow: hidden;
+    overflow-x: hidden;
   }
   
   body > footer {
